--- a/app/templates/feedlot/manifest/templates.html
+++ b/app/templates/feedlot/manifest/templates.html
@@ -13,10 +13,17 @@
         </div>
         <div class="flex space-x-3">
             <a href="{{ url_for('feedlot.create_manifest_template', feedlot_id=feedlot._id) }}" 
+               data-testid="create-template-button"
                class="bg-teal-600 hover:opacity-90 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
                 Create Template
             </a>
+            <a href="{{ url_for('feedlot.list_manifest_history', feedlot_id=feedlot._id) }}" 
+               data-testid="view-history-button"
+               class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
+                View History
+            </a>
             <a href="{{ url_for('feedlot.dashboard', feedlot_id=feedlot._id) }}" 
+               data-testid="back-to-dashboard-button"
                class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
                 Back to Dashboard
             </a>
