--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,6 +63,7 @@
             display: flex !important;
         }
     </style>
+    {% block extra_head %}{% endblock %}
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col">
     <!-- Navigation -->
