--- a/app/templates/top_level/dashboard.html
+++ b/app/templates/top_level/dashboard.html
@@ -4,6 +4,8 @@
 
 {% block home_url %}{{ url_for('top_level.dashboard') }}{% endblock %}
 
+{% block back_button %}{% endblock %}
+
 {% block content %}
 <div class="flex flex-col md:flex-row gap-6 mb-8">
     <div class="flex-1">
